--- a/main-page/main-page.html
+++ b/main-page/main-page.html
@@ -12,12 +12,9 @@
         <div class="navbar-vector"></div>
         <div class="container-fluid">
           <div class="navbar-header">
-            <header class="header">
                 <img class="logo" src="../assets/logo.svg" alt="логотип в виде куба">
-                <p  class="header__title">latte minds</p>
-            </header>
           </div>
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right navbar-top">
               <li class="nav__item"><a class="nav__link" href="#">Стать партнером</a></li>
               <li class="nav__item"><a class="nav__link" href="#">Партнеры</a></li>
               <li class="nav__item"><a class="nav__link" href="#">Условия</a></li>
@@ -44,7 +41,100 @@
             <div class="welcome__background-vector-left"></div>
             <div class="welcome__background-vector-cup"></div>
         </section>
-        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Aeaa60f5a41ff4242102048be227304675975eb13fbdb8b320b691df80b9e0b62&amp;source=constructor" width="100%" height="690" frameborder="0"></iframe>
+
+        <section class="yandex-map">
+          <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Aeaa60f5a41ff4242102048be227304675975eb13fbdb8b320b691df80b9e0b62&amp;source=constructor" width="100%" height="690" frameborder="0"></iframe>
+        </section>
+
+        <section class="partners">
+          <div class="partners__top-vector"></div>
+          <div class="partners__coffee-beans"></div>
+          <h2 class="partners__title">наши партнеры</h2>
+          <p class="partners__subtitle">Небольшой текст про партнеров. Например, о том, как тщательно&nbsp;они отбираются или, что покрывают большую часть города.</p>
+          <div class="partners__container">
+            <nav aria-label="пагинация карточек партнеров для стрелки влево">
+              <ul class="pager">
+                <li class="previous"></li>
+              </ul>
+            </nav>
+            <article class="partners__item">
+              <img class="partners__img" src="../assets/main-page/akademia.jpg" alt="фото кофейни Академия кофе">
+              <h3 class="partners__name">Название</h3>
+              <ul class="partners__rating">
+                <li class="partners__star"></li>
+                <li class="partners__star"></li>
+                <li class="partners__star"></li>
+                <li class="partners__star"></li>
+                <li class="partners__star"></li>
+            </ul>
+            <p class="partners__description">Описание</p>
+            <div class="partners__review">Отзывы</div>
+            </article>
+            <article class="partners__item">
+              <img class="partners__img" src="../assets/main-page/capital-of-siberia.jpg" alt="фото кофейни Capital of Siberia">
+              <h3 class="partners__name">Название</h3>
+              <ul class="partners__rating">
+                <li class="partners__star"></li>
+                <li class="partners__star"></li>
+                <li class="partners__star"></li>
+                <li class="partners__star"></li>
+                <li class="partners__star"></li>
+            </ul>
+            <p class="partners__description">Описание</p>
+            <div class="partners__review">Отзывы</div>
+            </article>
+            <article class="partners__item">
+              <img class="partners__img" src="../assets/main-page/blackwood.jpg" alt="фото кофейни Blackwood">
+              <h3 class="partners__name">Название</h3>
+              <ul class="partners__rating">
+                <li class="partners__star"></li>
+                <li class="partners__star"></li>
+                <li class="partners__star"></li>
+                <li class="partners__star"></li>
+                <li class="partners__star"></li>
+            </ul>
+            <p class="partners__description">Описание</p>
+            <div class="partners__review">Отзывы</div>
+            </article>
+            <article class="partners__item">
+              <img class="partners__img" src="../assets/main-page/skuratov.jpg" alt="фото кофейни Skuratov coffee roasters">
+              <h3 class="partners__name">Название</h3>
+              <ul class="partners__rating">
+                <li class="partners__star"></li>
+                <li class="partners__star"></li>
+                <li class="partners__star"></li>
+                <li class="partners__star"></li>
+                <li class="partners__star"></li>
+            </ul>
+            <p class="partners__description">Описание</p>
+            <div class="partners__review">Отзывы</div>
+            </article>
+            <nav aria-label="пагинация карточек партнеров для стрелки вправо">
+              <ul class="pager">
+                <li class="next"></li>
+              </ul>
+            </nav>
+          </div>
+          <button type="button" class="btn btn-default">Загрузить ещё</button>
+          <div class="partners__coffee-cup"></div>
+          <div class="partners__bottom-vector"></div>
+        </section>
+        <footer class="footer">
+          <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-footer">
+              <img class="logo" src="../assets/logo.svg" alt="логотип в виде куба">
+          </div>
+          <p class="navbar-text">&copy; 2024 Latte Minds</p>
+          <ul class="nav navbar-nav navbar-right">
+            <li class="nav__item"><a class="nav__link" href="#">Стать партнером</a></li>
+            <li class="nav__item"><a class="nav__link" href="#">Партнеры</a></li>
+            <li class="nav__item"><a class="nav__link" href="#">Условия</a></li>
+            <li class="nav__item"><a class="nav__link" href="#">Обратная связь</a></li>
+          </ul>
+          </div>
+      </nav>
+        </footer>
       </main>
     
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
