update routes in index.html

--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Latte Minds</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-    <link rel="stylesheet" href="/main-page/main-page.css">
-    <!-- <link rel="stylesheet" href="/latte-mind/main-page/main-page.css"> -->
+    <link rel="stylesheet" href="/latte-mind/main-page/main-page.css">
 </head>
 <body>
     <nav class="navbar navbar-default">
         <div class="navbar-vector"></div>
         <div class="container-fluid">
           <div class="navbar-header">
-                <img class="logo" src="/assets/logo.svg" alt="логотип в виде куба">
-                <!-- <img class="logo" src="/latte-mind/assets/logo.svg" alt="логотип в виде куба"> -->
+                <img class="logo" src="/latte-mind/assets/logo.svg" alt="логотип в виде куба">
           </div>
             <ul class="nav navbar-nav navbar-right navbar-top">
               <li class="nav__item"><a class="nav__link" href="#">Стать партнером</a></li>
