almost done 1st page, only carousel in partners section is not ready, adaptive is done

--- a/main-page/main-page.html
+++ b/main-page/main-page.html
@@ -61,7 +61,7 @@
           <div class="partners__top-vector"></div>
           <div class="partners__coffee-beans"></div>
           <h2 class="partners__title">наши партнеры</h2>
-          <p class="partners__subtitle">Небольшой текст про партнеров. Например, о том, как тщательно&nbsp;они отбираются или, что покрывают большую часть города.</p>
+          <p class="partners__subtitle">Небольшой текст про партнеров. Например, о том, как тщательно они отбираются или, что покрывают большую часть города.</p>
           <div class="partners__container">
             <nav aria-label="пагинация карточек партнеров для стрелки влево">
               <ul class="pager">
@@ -129,6 +129,12 @@
                 <li class="next"></li>
               </ul>
             </nav>
+            <ol class="carousel-indicators">
+              <li data-target="#partnersCarousel" data-slide-to="0" class="active"></li>
+              <li data-target="#partnersCarousel" data-slide-to="1"></li>
+              <li data-target="#partnersCarousel" data-slide-to="2"></li>
+              <li data-target="#partnersCarousel" data-slide-to="3"></li>
+            </ol>
           </div>
           <button type="button" class="btn btn-default">Загрузить ещё</button>
           <div class="partners__coffee-cup"></div>
