feature: add conditions page + adaptive design

--- a/conditions/conditions.html
+++ b/conditions/conditions.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="html, html5, css, css3, bootstrap">
     <title>Latte Minds</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-    <link rel="stylesheet" href="/main-page/main-page.css">
+    <link rel="stylesheet" href="/conditions/conditions.css">
     <!-- <link rel="stylesheet" href="/latte-mind/main-page/main-page.css"> -->
 </head>
 <body>
@@ -36,7 +36,79 @@
             </div>
         </div>
       </nav>
-
+      <main class="conditions">
+        <div class="conditions__background-vector-right"></div>
+        <div class="title-container">
+            <h1 class="conditions__title">условия использования</h1>
+            <div class="title-bottom-vector"></div>
+        </div>
+        <div class="conditions__container">
+            <div class="grid-container">
+                <div class="grid-item align-right">
+                    <img src="/assets/conditions/discount-icon.svg" class="desktop-img" alt="discount coupon with % sign">
+                    <img src="/assets/conditions/discount-icon-mob.svg" class="mobile-img" alt="discount coupon with % sign">
+                    <h2 class="grid-item__title">Скидка на кофе</h2>
+                    <p class="grid-item__subtitle">Купон позволяет получить скидку на кофе в любой кофейне или ресторане из нашего каталога.</p>
+                </div>
+                <div class="grid-item large-img">
+                    <img src="../assets/conditions/cup-with-qr.svg" alt="cup of coffee with QR-code">
+                </div>
+                <div class="grid-item align-left">
+                    <img src="/assets/conditions/qr-icon.svg" class="desktop-img" alt="qr-icon">
+                    <img src="/assets/conditions/qr-icon-mob.svg" class="mobile-img" alt="discount coupon with % sign">
+                    <h2 class="grid-item__title">Купон — это QR-код</h2>
+                    <p class="grid-item__subtitle">Купон — это картинка (QR-код или штрихкод), которая высылается на почтовый ящик после оплаты на сайте.</p>
+                </div>
+                <div class="grid-item align-right">
+                    <img src="/assets/conditions/calendar-icon.svg" class="desktop-img" alt="calendar icon">
+                    <img src="/assets/conditions/calendar-icon-mob.svg" class="mobile-img" alt="calendar icon">
+                    <h2 class="grid-item__title">Срок действия купона</h2>
+                    <p class="grid-item__subtitle">Купон действует в течение текущего календарного месяца, независимо от того, когда был куплен. Первого числа месяца происходит обновление купона</p>
+                </div>
+                <div class="grid-item align-left">
+                    <img src="/assets/conditions/tick-icon.svg" class="desktop-img" alt="tick icon">
+                    <img src="/assets/conditions/tick-icon-mob.svg" class="mobile-img" alt="calendar icon">
+                    <h2 class="grid-item__title">Это не подписка</h2>
+                    <p class="grid-item__subtitle">Оплата это не подписка, карта нигде не сохраняется — только разовая оплата.</p>
+                </div>                
+                <div class="grid-item align-right">
+                    <img src="/assets/conditions/cup-icon.svg" class="desktop-img" alt="cup with a hot beverage icon">
+                    <img src="/assets/conditions/cup-icon-mob.svg" class="mobile-img" alt="calendar icon">
+                    <h2 class="grid-item__title">Стоимость купона = кружка кофе</h2>
+                    <p class="grid-item__subtitle">Стоимость купона сроком на месяц на неограниченное количество кофе — 250 рублей. Средняя стоимость кофе — 280 рублей.</p>
+                </div>
+                <div class="grid-item align-left">
+                    <img src="/assets/conditions/discount-25-icon.svg" class="desktop-img" alt="a coupon for 25-50% discount">
+                    <img src="/assets/conditions/discount-25-icon-mob.svg" class="mobile-img" alt="calendar icon">
+                    <h2 class="grid-item__title">Скидка от 25% до 50%</h2>
+                    <p class="grid-item__subtitle">Скидки на кофе в кофейнях от 25% до 50%, в ресторане — бесплатный кофе или скидка 50% при заказе бизнес-ланча.</p>
+                </div>
+            </div>
+        </div>
+        <div class="conditions__background-vector-left"></div>
+        <div class="decorations-container">
+            <div class="top-vector"></div>
+            <div class="cup"></div>
+            <div class="coffee-beans"></div>
+            <div class="bottom-vector"></div>
+        </div>
+    </main>
+    <footer class="footer">
+        <nav class="navbar navbar-default">
+          <div class="container-fluid">
+            <div class="navbar-footer">
+                <img class="logo" src="/assets/logo.svg" alt="логотип latte-mind">
+            </div>
+            <p class="navbar-text">&copy; 2024 Latte Minds</p>
+            <ul class="nav navbar-nav navbar-right">
+              <li class="nav__item"><a class="nav__link" href="#">Стать партнером</a></li>
+              <li class="nav__item"><a class="nav__link" href="#">Партнеры</a></li>
+              <li class="nav__item"><a class="nav__link" href="#">Условия</a></li>
+              <li class="nav__item"><a class="nav__link" href="#">Обратная связь</a></li>
+            </ul>
+          </div>
+      </nav>
+      </footer>
 
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
