partnership page desktop is almost done

--- a/become-a-partner/become-a-partner.html
+++ b/become-a-partner/become-a-partner.html
@@ -36,35 +36,56 @@
         </div>
       </nav>
       <main class="partnership">
-        <h1 class="partnership__title">стать партнером</h1>
-        <section class="container intro">
-            <article class="container__article">
-                <h2 class="container__title">Присоединяйтесь к нашему кругу партнеров и вместе мы создадим незабываемые кофейные впечатления для наших гостей!</h2>
-                <p class="container__subtitle">Мы рады предложить вам возможность привлечь новых клиентов и увеличить вашу аудиторию. Мы готовы поддержать ваш бизнес, используя эффективные методы контекстной рекламы, мессенджеров и социальных сетей.</p>
+        <div class="top-left-vector"></div>
+        <div class="partnership__title-container">
+            <h1 class="partnership__title">стать партнером</h1>
+        </div>
+        <section class="block-container intro">
+            <article class="block-container__article">
+                <h2 class="block-container__title">Присоединяйтесь к нашему кругу партнеров и вместе мы создадим незабываемые кофейные впечатления для наших гостей!</h2>
+                <p class="block-container__subtitle">Мы рады предложить вам возможность привлечь новых клиентов и увеличить вашу аудиторию. Мы готовы поддержать ваш бизнес, используя эффективные методы контекстной рекламы, мессенджеров и социальных сетей.</p>
             </article>
-            <img src="/assets/become-a-partner/cups-on-blue.svg" class="container__img" alt="cups of coffee on a blue background">
+            <img src="/assets/become-a-partner/cups-on-blue.svg" class="block-container__img" alt="cups of coffee on a blue background">
         </section>
-        <section class="container offers">
-            <article class="container__article">
-                <h2 class="container__title">Что мы предлагаем вам</h2>
-                <p class="container__subtitle">Каждый партнер, присоединяясь к нам, обязуется предоставить скидку на любой кофе при предъявлении нашего купона в формате QR-кода или штрихкода. Наш менеджер тщательно оценит качество кофе, сервис и уют вашего заведения. Если наше посещение вашего заведения покажется вдохновляющим, мы сделаем вам предложение о включении в наш каталог.</p>
-                <div class="container__conditions">
-                    <img src="/assets/become-a-partner/advertise-icon-mob.svg" class="container__conditions-img_mobile" alt="cups of coffee on a blue background">
-                    <img src="/assets/become-a-partner/advertise-icon.svg" class="container__conditions-img_desktop" alt="cups of coffee on a blue background">
-                    <h3 class="container__conditions-title">Бесплатная реклама</h3>
-                    <p class="container__conditions-subtitle">Реклама вашего заведения на нашем сайте, привлекая внимание ценителей кофе и гурманов.</p>
+        <section class="block-container offers">
+            <article class="block-container__article">
+                <h2 class="block-container__title">Что мы предлагаем вам</h2>
+                <p class="block-container__subtitle">Каждый партнер, присоединяясь к нам, обязуется предоставить скидку на любой кофе при предъявлении нашего купона в формате QR-кода или штрихкода. Наш менеджер тщательно оценит качество кофе, сервис и уют вашего заведения. Если наше посещение вашего заведения покажется вдохновляющим, мы сделаем вам предложение о включении в наш каталог.</p>
+                <div class="block-container__conditions">
+                    <img src="/assets/become-a-partner/advertise-icon-mob.svg" class="block-container__conditions-img_mobile" alt="cups of coffee on a blue background">
+                    <img src="/assets/become-a-partner/advertise-icon.svg" class="block-container__conditions-img_desktop" alt="cups of coffee on a blue background">
+                    <h3 class="block-container__conditions-title">Бесплатная реклама</h3>
+                    <p class="block-container__conditions-subtitle">Реклама вашего заведения на нашем сайте, привлекая внимание ценителей кофе и гурманов.</p>
                 </div>
-                <div class="container__conditions">
-                    <img src="/assets/become-a-partner/rating-icon-mob.svg" class="container__conditions-img_mobile" alt="cups of coffee on a blue background">
-                    <img src="/assets/become-a-partner/rating-icon.svg" class="container__conditions-img_desktop" alt="cups of coffee on a blue background">
-                    <h3 class="container__conditions-title">Отзывы и рейтинг</h3>
-                    <p class="container__conditions-subtitle">Сбор отзывов и формирование рейтинга, что поможет вам привлечь еще больше посетителей и укрепить вашу репутацию.</p>
+                <div class="block-container__conditions">
+                    <img src="/assets/become-a-partner/rating-icon-mob.svg" class="block-container__conditions-img_mobile" alt="cups of coffee on a blue background">
+                    <img src="/assets/become-a-partner/rating-icon.svg" class="block-container__conditions-img_desktop" alt="cups of coffee on a blue background">
+                    <h3 class="block-container__conditions-title">Отзывы и рейтинг</h3>
+                    <p class="block-container__conditions-subtitle">Сбор отзывов и формирование рейтинга, что поможет вам привлечь еще больше посетителей и укрепить вашу репутацию.</p>
                 </div>
             </article>
-            <img src="/assets/become-a-partner/coffee-cup-on-beige.svg" class="container__img" alt="cups of coffee on a blue background">
+            <img src="/assets/become-a-partner/coffee-cup-on-beige.svg" class="block-container__img" alt="a cup of coffee on a beige background">
         </section>
+        <section class="block-container form-section">
+            <form class="block-container__form">
+                <h2 class="block-container__form-title">Стать партнером</h2>
+                <div class="form-group text-inputs">
+                  <input type="text" class="form-control text-input" placeholder="Имя">
+                  <input type="text" class="form-control text-input" placeholder="Название компании">
+                </div>
+                <div class="form-group">
+                    <input type="email" class="form-control" placeholder="Ваш e-mail">
+                </div>
+                <div class="form-group">
+                    <input type="tel" class="form-control"placeholder="Ваш контактный номер">
+                </div>
+                <button type="submit" class="btn btn-default">Отправить</button>
+            </form>
+            <img src="/assets/become-a-partner/pouring-milk-in-cup.svg" class="block-container__img" alt="painting with milk on coffee in a cup">
+        </section>
+        <div class="bottom-right-vector"></div>
+        <div class="bottom-vector"></div>
     </main>
-
     <footer class="footer">
         <nav class="navbar navbar-default">
           <div class="container-fluid">
