feature: Become a partner page is completed, font Gilory added, shadows after headers on all pages are added

--- a/become-a-partner/become-a-partner.html
+++ b/become-a-partner/become-a-partner.html
@@ -11,8 +11,7 @@
     <link rel="stylesheet" href="/become-a-partner/become-a-partner.css">
 </head>
 <body>
-    <nav class="navbar navbar-default">
-        <div class="navbar-vector"></div>
+    <nav class="navbar navbar-default header">
         <div class="container-fluid">
             <div class="navbar-header">
               <img class="logo" src="/assets/logo.svg" alt="логотип latte-mind">
@@ -37,6 +36,7 @@
       </nav>
       <main class="partnership">
         <div class="top-left-vector"></div>
+        <div class="coffee-beans"></div>
         <div class="partnership__title-container">
             <h1 class="partnership__title">стать партнером</h1>
         </div>
@@ -46,10 +46,12 @@
                 <p class="block-container__subtitle">Мы рады предложить вам возможность привлечь новых клиентов и увеличить вашу аудиторию. Мы готовы поддержать ваш бизнес, используя эффективные методы контекстной рекламы, мессенджеров и социальных сетей.</p>
             </article>
             <img src="/assets/become-a-partner/cups-on-blue.svg" class="block-container__img" alt="cups of coffee on a blue background">
+            <div class="cup-of-coffee"></div>
+            <div class="bottom-intro-vector"></div>
         </section>
         <section class="block-container offers">
             <article class="block-container__article">
-                <h2 class="block-container__title">Что мы предлагаем вам</h2>
+                <h2 class="block-container__title title-mobile">Что мы предлагаем вам</h2>
                 <p class="block-container__subtitle">Каждый партнер, присоединяясь к нам, обязуется предоставить скидку на любой кофе при предъявлении нашего купона в формате QR-кода или штрихкода. Наш менеджер тщательно оценит качество кофе, сервис и уют вашего заведения. Если наше посещение вашего заведения покажется вдохновляющим, мы сделаем вам предложение о включении в наш каталог.</p>
                 <div class="block-container__conditions">
                     <img src="/assets/become-a-partner/advertise-icon-mob.svg" class="block-container__conditions-img_mobile" alt="cups of coffee on a blue background">
@@ -67,8 +69,10 @@
             <img src="/assets/become-a-partner/coffee-cup-on-beige.svg" class="block-container__img" alt="a cup of coffee on a beige background">
         </section>
         <section class="block-container form-section">
+            <div class="top-form-vector"></div>
+            <h2 class="block-container__form-title mobile-title">Стать партнером</h2>
             <form class="block-container__form">
-                <h2 class="block-container__form-title">Стать партнером</h2>
+                <h2 class="block-container__form-title desktop-title">Стать партнером</h2>
                 <div class="form-group text-inputs">
                   <input type="text" class="form-control text-input" placeholder="Имя">
                   <input type="text" class="form-control text-input" placeholder="Название компании">
@@ -82,8 +86,10 @@
                 <button type="submit" class="btn btn-default">Отправить</button>
             </form>
             <img src="/assets/become-a-partner/pouring-milk-in-cup.svg" class="block-container__img" alt="painting with milk on coffee in a cup">
+            <div class="bottom-right-vector"></div>
+        
         </section>
-        <div class="bottom-right-vector"></div>
+        <div class="bottom-coffee-beans-vector"></div>
         <div class="bottom-vector"></div>
     </main>
     <footer class="footer">
