--- a/conditions/conditions.html
+++ b/conditions/conditions.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/conditions/conditions.css">
 </head>
 <body>
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default header">
         <div class="navbar-vector"></div>
         <div class="container-fluid">
             <div class="navbar-header">
