--- a/main-page/main-page.html
+++ b/main-page/main-page.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/main-page/main-page.css">
 </head>
 <body>
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-default header">
     <div class="navbar-vector"></div>
     <div class="container-fluid">
         <div class="navbar-header">
