fix: form, desktop layout, header and footer on become-a-partner page

--- a/become-a-partner/become-a-partner.html
+++ b/become-a-partner/become-a-partner.html
@@ -34,25 +34,25 @@
             </div>
         </div>
       </nav>
-      <main class="partnership">
+    <main class="partnership">
         <div class="top-left-vector"></div>
         <div class="coffee-beans"></div>
-        <div class="partnership__title-container">
-            <h1 class="partnership__title">стать партнером</h1>
-        </div>
-        <section class="block-container intro">
-            <article class="block-container__article">
-                <h2 class="block-container__title">Присоединяйтесь к нашему кругу партнеров и вместе мы создадим незабываемые кофейные впечатления для наших гостей!</h2>
-                <p class="block-container__subtitle">Мы рады предложить вам возможность привлечь новых клиентов и увеличить вашу аудиторию. Мы готовы поддержать ваш бизнес, используя эффективные методы контекстной рекламы, мессенджеров и социальных сетей.</p>
-            </article>
+        <section class="wrapper">
+            <div class="partnership__title-container">
+                <h1 class="partnership__title">стать партнером</h1>
+            </div>
+            <div class="block-container__article intro">
+                <h2 class="block-container__title">Присоединяйтесь к нашему кругу партнеров и вместе мы создадим незабываемые кофейные впечатления для наших гостей!</h2>
+                <p class="block-container__subtitle">Мы рады предложить вам возможность привлечь новых клиентов и увеличить вашу аудиторию. Мы готовы поддержать ваш бизнес, используя эффективные методы контекстной рекламы, мессенджеров и социальных сетей.</p>
+                <div class="cup-of-coffee"></div>
+                <div class="bottom-intro-vector"></div>
+            </div>
             <img src="/assets/become-a-partner/cups-on-blue.svg" class="block-container__img" alt="cups of coffee on a blue background">
-            <div class="cup-of-coffee"></div>
-            <div class="bottom-intro-vector"></div>
-        </section>
-        <section class="block-container offers">
-            <article class="block-container__article">
+
+            <img src="/assets/become-a-partner/coffee-cup-on-beige.svg" class="block-container__img" alt="a cup of coffee on a beige background">
+            <div class="block-container__article offers">
                 <h2 class="block-container__title title-mobile">Что мы предлагаем вам</h2>
-                <p class="block-container__subtitle">Каждый партнер, присоединяясь к нам, обязуется предоставить скидку на любой кофе при предъявлении нашего купона в формате QR-кода или штрихкода. Наш менеджер тщательно оценит качество кофе, сервис и уют вашего заведения. Если наше посещение вашего заведения покажется вдохновляющим, мы сделаем вам предложение о включении в наш каталог.</p>
+                <p class="block-container__subtitle">Каждый партнер, присоединяясь к нам, обязуется предоставить скидку на любой кофе при предъявлении нашего купона в формате QR-кода или штрихкода. Наш менеджер тщательно оценит качество кофе, сервис и уют вашего заведения. Если наше посещение вашего заведения покажется вдохновляющим, мы сделаем вам предложение о включении в наш каталог.</p>
                 <div class="block-container__conditions">
                     <img src="/assets/become-a-partner/advertise-icon-mob.svg" class="block-container__conditions-img_mobile" alt="cups of coffee on a blue background">
                     <img src="/assets/become-a-partner/advertise-icon.svg" class="block-container__conditions-img_desktop" alt="cups of coffee on a blue background">
@@ -65,17 +65,16 @@
                     <h3 class="block-container__conditions-title">Отзывы и рейтинг</h3>
                     <p class="block-container__conditions-subtitle">Сбор отзывов и формирование рейтинга, что поможет вам привлечь еще больше посетителей и укрепить вашу репутацию.</p>
                 </div>
-            </article>
-            <img src="/assets/become-a-partner/coffee-cup-on-beige.svg" class="block-container__img" alt="a cup of coffee on a beige background">
-        </section>
-        <section class="block-container form-section">
-            <div class="top-form-vector"></div>
+            </div>
+
+            <!-- <div class="block-container__form-container"> -->
             <h2 class="block-container__form-title mobile-title">Стать партнером</h2>
+            <div class="top-form-vector" id="top-form-vector"></div>
             <form class="block-container__form">
                 <h2 class="block-container__form-title desktop-title">Стать партнером</h2>
                 <div class="form-group text-inputs">
-                  <input type="text" class="form-control text-input" placeholder="Имя">
-                  <input type="text" class="form-control text-input" placeholder="Название компании">
+                    <input type="text" class="form-control text-input" placeholder="Имя">
+                    <input type="text" class="form-control text-input" placeholder="Название компании">
                 </div>
                 <div class="form-group">
                     <input type="email" class="form-control" placeholder="Ваш e-mail">
@@ -86,8 +85,8 @@
                 <button type="submit" class="btn btn-default">Отправить</button>
             </form>
             <img src="/assets/become-a-partner/pouring-milk-in-cup.svg" class="block-container__img" alt="painting with milk on coffee in a cup">
+        <!-- </div> -->
             <div class="bottom-right-vector"></div>
-        
         </section>
         <div class="bottom-coffee-beans-vector"></div>
         <div class="bottom-vector"></div>
